syntax = "proto3";

package indexservice;

option go_package = "engine/indexservice";

import "doc.proto";
import "term_query.proto";

message DocID {
    string DocID = 1;
}

message AffectedCount {
    int32 Count = 1;
}

message SearchRequest {
    types.TermQuery Query = 1;
    uint64 OnFlag = 2;
    uint64 OffFlag = 3;
    repeated uint64 OrFlags = 4;
}

message SearchResult {
    repeated types.Document Results = 1;
}

// 定义 gRPC 服务
service IndexService {
    rpc DeleteDoc(DocID) returns (AffectedCount) {}
    rpc AddDoc(types.Document) returns (AffectedCount) {}
    rpc Search(SearchRequest) returns (SearchResult) {}
}

//protoc \
  //--proto_path="engine/types" \
  //--proto_path="engine/index_service" \
  //--go_out="engine/index_service" \
  //--go_opt=paths=source_relative \
  //--go-grpc_out="engine/index_service" \
  //--go-grpc_opt=paths=source_relative \
  //"engine/index_service/index.proto"